Fixes #3534: Chat on iOS only shows parts after typing

--- a/public/assets/chat/chat.scss
+++ b/public/assets/chat/chat.scss
@@ -17,7 +17,7 @@
     right: 0;
     width: 100%;
     border-radius: 0 !important;
-    font-size: 16px;
+    font-size: 16px !important;
   }
 
   &--animate {
